[gd_scene load_steps=8 format=3 uid="uid://d0gf52rcd1hn"]

[ext_resource type="StyleBox" uid="uid://dfa36wxs72oc0" path="res://addons/sprouty_dialogs/editor/theme/empty_panel.tres" id="2_4ylhb"]
[ext_resource type="Script" uid="uid://tonah5sswtmp" path="res://addons/sprouty_dialogs/editor/modules/characters/scripts/character_panel.gd" id="2_8cc8c"]
[ext_resource type="PackedScene" uid="uid://b3dunt76vknsq" path="res://addons/sprouty_dialogs/editor/modules/characters/character_editor.tscn" id="3_gsk7m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7lnmp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5e2ss"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ceujg"]

[sub_resource type="DPITexture" id="DPITexture_q6lul"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="CharacterPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_7lnmp")
script = ExtResource("2_8cc8c")

[node name="StartPanel" type="Panel" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_5e2ss")

[node name="Container" type="VBoxContainer" parent="StartPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.5
offset_top = -49.5
offset_right = 176.5
offset_bottom = 49.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="Label" type="RichTextLabel" parent="StartPanel/Container"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_ceujg")
bbcode_enabled = true
text = "[center][wave]Create or open a [color=orange]character[/color] to start!
[center]\\( ^-^)/

"
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="ButtonsContainer" type="HBoxContainer" parent="StartPanel/Container"]
layout_mode = 2
alignment = 1

[node name="NewCharacterButton" type="Button" parent="StartPanel/Container/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Character"
icon = SubResource("DPITexture_q6lul")

[node name="OpenCharacterButton" type="Button" parent="StartPanel/Container/ButtonsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open Character"
icon = SubResource("DPITexture_q6lul")

[node name="EditorPanel" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_4ylhb")

[node name="CharacterEditor" parent="EditorPanel" instance=ExtResource("3_gsk7m")]
layout_mode = 2
